<resources>
    <string name="app_name">流帮</string>
    <string name="home">主页</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
    <string name="zhanghao">用户名/手机号码</string>
    <string name="mima">登陆密码</string>
    <string name="yanzhengma">验证码</string>
    <string name="send">发送验证码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="back">&#060;</string>
    <string name="zczhanghao">请输入用户名</string>
    <string name="zcmima">请输入密码</string>
    <string name="mimaagain">确认密码</string>
    <string name="phonenember">请输入手机号码</string>
    <string name="zcyanzhengma">验证码</string>
    <string name="daohang">导航</string>
    <string name="names">苗条小霸王</string>
    <string name="integral">我的积分</string>
    <string name="service">客服支持</string>
    <string name="setting">设置</string>

</resources>
