<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editText1"
        android:hint="@string/zczhanghao"
        android:background="@drawable/edittext"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editText2"
        android:hint="@string/zcmima"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext"
        android:layout_below="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="numberPassword"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editText3"
        android:hint="@string/mimaagain"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="numberPassword"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editText4"
        android:hint="@string/phonenember"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext"
        android:layout_below="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="phone"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editText5"
        android:hint="@string/yanzhengma"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext"
        android:layout_below="@+id/editText4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="numberPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/send"
        android:id="@+id/yanzhengma"
        android:paddingLeft="10dp"
        android:background="@drawable/yanzhengma"
        android:textColor="@color/yanzhenmacolor"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_alignTop="@+id/editText5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zc"
        android:background="@drawable/register"
        android:textColor="@color/registercolor"
        android:id="@+id/register"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
