<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.pl.lbapps.mine"
    android:orientation="vertical">


    <com.pl.lbapps.view.CustomTitleBar
            android:id="@+id/ct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text=""
            >

    </com.pl.lbapps.view.CustomTitleBar>

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/images1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/names"
        android:layout_alignTop="@+id/imgUser"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/username" />
    <TextView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="------------------------"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/integral"
        android:layout_alignTop="@+id/one"
        android:layout_marginTop="30dp"
        android:gravity="left|center_vertical"
        android:background="@drawable/button"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8888"
        android:textSize="18dp"
        android:textColor="@color/colorAccent"
        android:layout_alignTop="@+id/button1"
        android:layout_marginTop="-35dp"
        android:translationZ="10dp"
        android:layout_marginLeft="320dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/service"
        android:layout_alignTop="@+id/button1"
        android:layout_marginTop="30dp"
        android:gravity="left|center_vertical"
        android:background="@drawable/button"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/setting"
        android:layout_alignTop="@+id/button2"
        android:layout_marginTop="30dp"
        android:gravity="left|center_vertical"
        android:background="@drawable/button"
        android:paddingLeft="10dp"/>



</LinearLayout>
